--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "react-scripts": "5.0.1",
         "styled-components": "^5.3.5",
         "swiper": "^8.2.4",
-        "web-vitals": "^2.1.4"
+        "web-vitals": "^2.1.4",
+        "wowjs": "^1.1.3"
     },
     "scripts": {
         "start": "react-scripts start",
