--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@chakra-ui/react": "^2.2.1",
+        "@emotion/react": "^11.9.3",
+        "@emotion/styled": "^11.9.3",
         "@googlemaps/react-wrapper": "^1.1.35",
         "@ramonak/react-progress-bar": "^5.0.0",
         "@react-google-maps/api": "^2.12.0",
@@ -10,10 +13,14 @@
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
         "bootstrap": "^5.1.3",
+        "framer-motion": "^6.3.12",
         "google-maps-react": "^2.0.6",
+        "mdb-react-ui-kit": "^4.0.0",
+        "mdbreact": "^5.2.0",
         "prop-types": "^15.8.1",
         "react": "^18.1.0",
         "react-bootstrap": "^2.4.0",
+        "react-bootstrap-tabs": "^2.0.0",
         "react-dom": "^18.1.0",
         "react-icons": "^4.4.0",
         "react-router-dom": "^6.3.0",
