--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "private": true,
     "dependencies": {
         "@chakra-ui/react": "^2.2.1",
+        "@chakra-ui/theme": "^2.1.0",
+        "@chakra-ui/theme-tools": "^2.0.2",
         "@emotion/react": "^11.9.3",
         "@emotion/styled": "^11.9.3",
         "@googlemaps/react-wrapper": "^1.1.35",
@@ -12,6 +14,10 @@
         "@testing-library/jest-dom": "^5.16.4",
         "@testing-library/react": "^13.3.0",
         "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^28.1.3",
+        "@types/node": "^18.0.0",
+        "@types/react": "^18.0.14",
+        "@types/react-dom": "^18.0.5",
         "bootstrap": "^5.1.3",
         "framer-motion": "^6.3.12",
         "google-maps-react": "^2.0.6",
@@ -22,11 +28,13 @@
         "react-bootstrap": "^2.4.0",
         "react-bootstrap-tabs": "^2.0.0",
         "react-dom": "^18.1.0",
+        "react-headless-tabs": "^5.1.2",
         "react-icons": "^4.4.0",
         "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
         "styled-components": "^5.3.5",
         "swiper": "^8.2.4",
+        "typescript": "^4.7.4",
         "web-vitals": "^2.1.4",
         "wowjs": "^1.1.3"
     },
